--- a/airflow-core/src/airflow/api_fastapi/core_api/openapi/v2-rest-api-generated.yaml
+++ b/airflow-core/src/airflow/api_fastapi/core_api/openapi/v2-rest-api-generated.yaml
@@ -6514,7 +6514,7 @@ paths:
         required: false
         schema:
           type: string
-          default: task_id
+          default: -priority_weight
           title: Order By
       responses:
         '200':
