--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,9 +106,10 @@ packages = []
 "amazon" = [
     "apache-airflow-providers-amazon>=9.0.0"
 ]
-"apache.arrow" = [
-    "apache-airflow-providers-apache-arrow>=1.0.0"
-]
+# TODO: uncomment once version 1.0.0 is released on PyPi
+#"apache.arrow" = [
+#    "apache-airflow-providers-apache-arrow>=1.0.0"
+#]
 "apache.beam" = [
     "apache-airflow-providers-apache-beam>=5.8.1; python_version !=\"3.13\""
 ]
