--- a/.github/workflows/basic-tests.yml
+++ b/.github/workflows/basic-tests.yml
@@ -397,38 +397,48 @@ jobs:
 
   test-airflow-standalone:
     timeout-minutes: 30
-    name: "Test Airflow standalone command"
+    name: "Test Airflow standalone commands"
     runs-on: ${{ fromJSON(inputs.runners) }}
     env:
-      PYTHON_MAJOR_MINOR_VERSION: "${{ inputs.default-python-version }}"
+      UV_VERSION: ${{inputs.uv-version}}
+      AIRFLOW_HOME: ~/airflow
     steps:
-      - name: "Cleanup repo"
-        shell: bash
-        run: docker run -v "${GITHUB_WORKSPACE}:/workspace" -u 0:0 bash -c "rm -rf /workspace/*"
       - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
         with:
           persist-credentials: false
-      - name: "Install Breeze"
-        uses: ./.github/actions/breeze
+      - name: "Install uv"
+        run: curl -LsSf https://astral.sh/uv/${UV_VERSION}/install.sh | sh
+      - name: "Set up Airflow home directory"
+        run: |
+          echo "Setting AIRFLOW_HOME to $AIRFLOW_HOME"
+          mkdir -p $AIRFLOW_HOME
+      - name: "Install Airflow from current repo (simulating user installation)"
+        run: |
+          uv pip install -e ./airflow-core
       - name: "Test airflow standalone command"
         run: |
-          # Start airflow standalone and wait for "Airflow is ready" message
-          timeout 600s breeze run bash -c "
-            airflow standalone 2>&1 | tee /tmp/airflow.log &
-            AIRFLOW_PID=\$!
+          airflow standalone 2>&1 | tee airflow_startup.log &
+          AIRFLOW_PID=$!
 
-            for i in {1..600}; do
-              if grep -q 'Airflow is ready' /tmp/airflow.log; then
-                echo 'Airflow standalone is ready!'
-                kill \$AIRFLOW_PID
-                exit 0
-              fi
-              sleep 1
-            done
+          # Wait for ready message till timeout (10 minutes)
+          for i in {1..600}; do
+            if ! kill -0 $AIRFLOW_PID 2>/dev/null; then
+              wait $AIRFLOW_PID
+              EXIT_CODE=$?
+              echo "FAILED: Airflow standalone exited with code $EXIT_CODE"
+              exit $EXIT_CODE
+            fi
 
-            echo 'FAILED: Airflow standalone did not start up in time'
-            kill \$AIRFLOW_PID
-            exit 1
-          "
+            if grep -q "Airflow is ready" airflow_startup.log; then
+              echo "SUCCESS: Airflow standalone is ready!"
+              kill $AIRFLOW_PID
+              exit 0
+            fi
 
+            sleep 1
+          done
+
+          echo "FAILED: Airflow standalone did not become ready in time"
+          kill $AIRFLOW_PID 2>/dev/null || true
+          exit 1
